# biohack

./: .gitignore  README.md  config.py  pyproject.toml
bak/benchscofi/: ALSWR.py  LogisticMF.py  NIMCGCN.py  PMF.py  PSGCN.py  PUextraTrees.py  VariationalWrapper.py
biohack/: main.py
data/PREDICT/: README  disease_semantic_PREDICT_matrix.csv  ratings_mat.csv
data/TRANSCRIPT/: README  ratings_mat.csv
frontend/: bun.lockb  package.json
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
notebook/: explore_dataset.ipynb  nacc_causal.ipynb  stanscofi_test.ipynb
notebooks/: nacc_processing&modelling.ipynb  trt_simulation.ipynb
results/: predictions_results.csv
