[tool.poetry]
name = "biohack"
version = "0.1.0"
description = ""
authors = ["LouisStefanuto <louis.stefanuto@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
bio = "biohack.main:app"


[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
