[tool.poetry]
name = "biohack"
version = "0.1.0"
description = ""
authors = ["LouisStefanuto <louis.stefanuto@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
bio = "biohack.main:app"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "1.2.*"
umap = "^0.1.1"
llvmlite = "^0.43.0"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
stanscofi = { path = "./external/stanscofi", develop = true }
typer = "^0.15.1"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
